--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,10 +1,10 @@
 .Footer {
   color: #fff;
-  background-color: #0000B2;
+  background-color: #0000b2;
 }
 
 .Footer .ContentWrapper {
-  padding: 20px 15px;
+  padding: 20px 15px 40px;
   margin: 0 -10px;
   display: flex;
 }
@@ -55,6 +55,12 @@
   padding: 30px 0;
   display: flex;
   justify-content: center;
+  border-top: 1px dotted #FFF0AB;
+}
+
+.Terms > div {
+  display: flex;
+  justify-content: space-between;
 }
 
 .Terms ul {
@@ -80,6 +86,10 @@
 
 .Terms ul li a {
   margin-left: 20px;
+}
+
+.Terms > div:last-child {
+  cursor: pointer;
 }
 
 .SocialMedia {
