--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,11 @@
+.Home {
+  background-image: url("/assets/imgs/honey-bg.jpg");
+}
+
 .Home .SubHeader {
   width: 100%;
   margin-top: 85px;
-  background: #0000B2;
+  background: #0000b2;
   position: fixed;
   z-index: 9;
 }
@@ -16,7 +20,7 @@
 .Home .SubHeader h1 {
   margin: 0;
   color: #fff;
-  font-weight: 600;
+  font-weight: 300;
   font-size: 32px;
 }
 
@@ -34,14 +38,12 @@
 .Home .SubTitle h2 {
   margin: 0;
   font-size: 26px;
-  color: #0000B2;
+  color: #0000b2;
 }
 
 .Home .Intro {
   padding: 30px 0;
   margin-top: -5px;
-  background-image: url("/assets/imgs/honey-bg.jpg");
-  background-size: auto 100%;
 }
 
 .Home .Intro > div {
@@ -56,7 +58,7 @@
   line-height: 90px;
   text-align: center;
   font-weight: 700;
-  color: #0000B2;
+  color: #0000b2;
 }
 
 .Home .Intro h3,
@@ -66,15 +68,15 @@
   line-height: 54px;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
-  color: #0000B2;
+  color: #0000b2;
 }
 
 .Home .Intro h3 a {
   text-decoration: underline;
 }
 
-.Home .Intro h3 a:hover{
-  color: #1919FF;
+.Home .Intro h3 a:hover {
+  color: #1919ff;
 }
 
 .Home .Intro .Countries {
@@ -83,7 +85,7 @@
 }
 
 .Home .Message {
-  background-color: #0000B2;
+  background-color: #0000b2;
   height: 70px;
   display: flex;
   align-items: center;
@@ -94,7 +96,7 @@
   margin: 0;
   font-size: 2.7em;
   font-family: "Poppins", sans-serif;
-  font-weight: 600;
+  font-weight: 300;
   color: #fff;
 }
 
@@ -194,7 +196,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #0000B2;
+  color: #0000b2;
 }
 
 .WhyUs .Overview > div + div {
@@ -215,7 +217,7 @@
 
 .WhyUs .Content {
   padding: 30px;
-  background-color: #0000B2;
+  background-color: #0000b2;
   border-radius: 5px;
   color: #fff;
 }
