--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
 .Header {
   width: 100%;
-  box-shadow: 0 1px 3px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
   z-index: 99;
-  background-color: #fff;
+  background-color: #0000B2;
+  border-bottom: 1px solid #999;
 }
 
 .HeaderWrap {
@@ -39,10 +39,15 @@
 .HeaderActions .SignInUp {
   margin-left: 20px;
   font-weight: 500;
+  color: #fff;
 }
 
 .HeaderActions .SignInUp span {
   margin: 0 5px;
+}
+
+.HeaderActions .SignInUp a {
+  color: #fff;
 }
 
 .MyAccount {
