--- a/src/components/RegionSelector/RegionSelector.module.css
+++ b/src/components/RegionSelector/RegionSelector.module.css
@@ -9,11 +9,11 @@
   padding: 0 16px;
   display: flex;
   align-items: center;
-  background-color: #0000B2;
+  background-color: #fff;
   font-weight: 600;
   cursor: pointer;
   border-radius: 4px;
-  color: #fff;
+  color: #0000B2;
   transition: all ease 0.3s;
 }
 
